# rccx

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  SPEC.md  TEST_PLAN.md
.github/workflows/: ci.yml
crates/rccx_ast/: Cargo.toml
crates/rccx_ast/src/: dump.rs  lib.rs
crates/rccx_borrowck/: Cargo.toml
crates/rccx_borrowck/src/: lib.rs
crates/rccx_cli/: Cargo.toml
crates/rccx_cli/src/: lib.rs  main.rs
crates/rccx_diagnostics/: Cargo.toml
crates/rccx_diagnostics/src/: code.rs  lib.rs  render.rs  sink.rs
crates/rccx_driver/: Cargo.toml
crates/rccx_driver/src/: lib.rs  options.rs
crates/rccx_hir/: Cargo.toml
crates/rccx_hir/src/: dump.rs  lib.rs
crates/rccx_lexer/: Cargo.toml
crates/rccx_lexer/src/: keyword.rs  lib.rs  token.rs
crates/rccx_mir/: Cargo.toml
crates/rccx_mir/src/: build.rs  dump.rs  lib.rs
crates/rccx_parser/: Cargo.toml
crates/rccx_parser/src/: lib.rs
crates/rccx_pp/: Cargo.toml
crates/rccx_pp/src/: lib.rs
crates/rccx_source/: Cargo.toml
crates/rccx_source/src/: lib.rs
crates/rccx_typeck/: Cargo.toml
crates/rccx_typeck/src/: lib.rs
