[workspace]
resolver = "2"
members = [
    "crates/rccx_cli",
    "crates/rccx_driver",
    "crates/rccx_source",
    "crates/rccx_diagnostics",
    "crates/rccx_lexer",
    "crates/rccx_pp",
    "crates/rccx_ast",
    "crates/rccx_parser",
    "crates/rccx_hir",
    "crates/rccx_typeck",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/rccx"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "warn"

[workspace.lints.clippy]
needless_return = "allow"
too_many_arguments = "allow"

[workspace.dependencies]
rccx_source = { path = "crates/rccx_source" }
rccx_diagnostics = { path = "crates/rccx_diagnostics" }
rccx_driver = { path = "crates/rccx_driver" }
rccx_lexer = { path = "crates/rccx_lexer" }
rccx_pp = { path = "crates/rccx_pp" }
rccx_ast = { path = "crates/rccx_ast" }
rccx_parser = { path = "crates/rccx_parser" }
rccx_hir = { path = "crates/rccx_hir" }
rccx_typeck = { path = "crates/rccx_typeck" }
