[package]
name = "rccx_borrowck"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Safe C borrow checker (use-after-move on owner pointers, Phase 7 MVP)."

[dependencies]
rccx_source.workspace = true
rccx_diagnostics.workspace = true
rccx_hir.workspace = true
rccx_mir.workspace = true

[dev-dependencies]
rccx_parser.workspace = true
rccx_pp.workspace = true
rccx_typeck.workspace = true

[lints]
workspace = true
