[package]
name = "rccx_driver"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Pipeline driver for rccx."

[dependencies]
rccx_source.workspace = true
rccx_diagnostics.workspace = true

[lints]
workspace = true
