[package]
name = "rccx_lexer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "C17/C23 lexer for rccx."

[dependencies]
rccx_source.workspace = true
rccx_diagnostics.workspace = true

[lints]
workspace = true
