[package]
name = "rccx_mir"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "MIR-C: control-flow IR built from HIR. Borrow checker input."

[dependencies]
rccx_source.workspace = true
rccx_hir.workspace = true

[dev-dependencies]
rccx_ast.workspace = true
rccx_parser.workspace = true
rccx_pp.workspace = true
rccx_typeck.workspace = true

[lints]
workspace = true
