[package]
name = "rccx_parser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "C parser (Phase 3 MVP) for rccx."

[dependencies]
rccx_source.workspace = true
rccx_diagnostics.workspace = true
rccx_lexer.workspace = true
rccx_pp.workspace = true
rccx_ast.workspace = true

[lints]
workspace = true
