[package]
name = "rccx_pp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "C preprocessor (Phase 2 MVP) for rccx."

[dependencies]
rccx_source.workspace = true
rccx_diagnostics.workspace = true
rccx_lexer.workspace = true

[lints]
workspace = true
