[package]
name = "rccx_typeck"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Name resolution + type checker for rccx (produces HIR)."

[dependencies]
rccx_source.workspace = true
rccx_diagnostics.workspace = true
rccx_ast.workspace = true
rccx_hir.workspace = true

[dev-dependencies]
rccx_parser.workspace = true
rccx_pp.workspace = true

[lints]
workspace = true
